# vecraspy

./: .gitignore  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-30-merge-tifs.md  2026-04-30-plot-slope.md  2026-05-05-trajectory-pipeline.md
docs/superpowers/specs/: 2026-04-30-merge-tifs-design.md  2026-04-30-plot-slope-design.md  2026-05-05-trajectory-pipeline-design.md
scripts/: add_git_ref.py  install_local.py  ship.py
src/vecraspy/: __init__.py  plot.py  raster.py  terrain.py  vector.py
tests/: test_plot.py  test_raster.py  test_vecraspy.py  test_vector.py
